fix ingredient list spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,21 +112,31 @@ main section section p {
   text-align: center;
 }
 
-#list section:nth-of-type(1) {
-  position: absolute;
-  width: 50%;
-}
-
 #list>section {
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 #list>section ul {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  width: 100%;
+  height: 75%;
+  margin-left: 40px;
+}
+
+#list section ul li {
+  display: flex;
+}
+
+.ingredient {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  font-size: 20px;
 }
 
 #list>section ul div {
@@ -134,6 +144,7 @@ main section section p {
   height: .6em;
   border: solid black .1px;
   border-radius: 4px;
+  margin-right: 5px;
 }
 
 #author {
@@ -153,7 +164,6 @@ main section section p {
 
 #author section {
   width: 66%;
-  font-family: 'Open Sans', sans-serif;
   margin: 1.4em;
   line-height: 1.4em;
   margin: .4em .5em;
@@ -161,6 +171,7 @@ main section section p {
 
 #author p {
   font-size: 1.1em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h3 {
